--- a/final.html
+++ b/final.html
@@ -55,17 +55,17 @@
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/client.jar">&emsp;Working Code - Client</a></p>
 <p style="color:#B8B8B8 ">&emsp;Test Cases:</p>
 <p style="color:#B8B8B8 ">&emsp;&emsp;Test Cases for <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/tests.jar">Client</a> (To <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/runTests.sh">runTests</a>: java -jar tests.jar)</p>
-<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/Android%20Testing%20Manual%20-%20Final.pdf">&emsp;&emsp; Manual Test for Android</a></p>
-<p>&emsp;Developer Design Document</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/Android%20Testing%20Manual%20-%20Final.pdf">&emsp;&emsp;Manual Test for Android</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/DeveloperDesignDocument.pdf">&emsp;Developer Design Document</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/ReflectionsOnDevelopmentProcess.pdf">&emsp;Reflections on Development Proces</a></p>
 
 
 <p style="color:#C8C8C8  ">DEPLOYMENT:</p>
-<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/Installation.txt">&emsp;Installer / Deployment and Functionality for Client</a></p>
-<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/NepalUS.apk">&emsp;Installer / Deployment and Functionality for Android</a></p>
+<p style="color:#B8B8B8 ">&emsp;Installer / Deployment and Functionality:</p>
+<p style="color:#B8B8B8 ">&emsp;&emsp;For <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/Installation.txt">Client</a> and <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/ClientLoginDetails.txt">log in details for Client</a></p>
+<p style="color:#B8B8B8 ">&emsp;&emsp;For <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/NepalUS.apk">Android</a> and <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/AndroidLoginDetails.txt">log in details for Android</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/Client_UserManual.pdf">&emsp;User Guide - Client</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/Android%20-%20userguide%20-%20final.pdf">&emsp;User Guide - Android</a></p>
-<p>&emsp;Troubleshooting Guide - Client</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/Android%20Trouble%20Shoot%20-%20Final.pdf">&emsp;Troubleshooting Guide - Android</a></p>
 
 <p><a href="index.html">Back</a></p>
